2005-12-19  Kornél Pál  <kornelpal@hotmail.com>

	* Regex.cs: Added support for regular expressions compiled to
	  assemblies by compiling the pattern. This solution ignores existing
	  CIL code but provides full support for regular expression classes
	  compiled by MS.NET.

2005-11-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* CaptureCollection.cs: Fixed length check.
	* Group.cs: Added missing validation for Synchronized method.
	* Match.cs: Added missing validation for Synchronized and Result 
	methods.
	* MatchEvaluator.cs: Added [Serializable] for 2.0 profile.
	* RegexCompilationInfo.cs: Added missing property validation.
	* Regex.cs: Implemented UseOptionC and UseOptionR protected methods
	(now documented). Fixed API for 2.0 profile.
	* RegexRunner.cs: Stubbed CharInClass for 2.0 profile.

2005-11-17  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* Match.cs: Removed the ": base ()" on the private ctor as it is
	unrequired and cause an extra public ctor to added (bug #76736).
	* MatchCollection.cs: Add missing virtual to indexer property.

2005-09-23  Raja R Harinath  <rharinath@novell.com>

	* interpreter.cs (Interpreter.Eval) [OpCode.Until]: Invert the
	sense of a test to reflect the code re-organization.

2005-09-22  Raja R Harinath  <rharinath@novell.com>

	Fix #72152, #72989.
	* interpreter.cs (Interpreter.Eval) [OpCode.Until]: Avoid some
	cases of recursion when dealing with eager quantifiers too.  We
	now avoid recursion when handling the innermost quantifier.
	(Interpreter.IntStack, Interpreter.stack): New.  Stack to help
	implement backtracking in eager quantifiers.

2005-09-21  Raja R Harinath  <rharinath@novell.com>

	* interpreter.cs (Interpreter.Eval) [OpCode.Until]: Avoid some
	cases of recursion when dealing with the minimum count and lazy
	quantifiers.

2005-08-23  Raja R Harinath  <rharinath@novell.com>

	* regex.cs: Remove.  Split into ...
	* MatchEvaluator.cs, Regex.cs, RegexCompilationInfo.cs,	